# wsted

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp
resources/: ui.qrc
src/: logger.cpp  logger.hpp  main.cpp  mainwindow.hpp  wsted.cpp  wsted.hpp
src/client/: loginwindow.cpp  loginwindow.hpp  main.cpp  roomwindow.cpp  roomwindow.hpp  wsted.cpp
src/server/: main.cpp  server.cpp  server.hpp
